# SmartHomePlatform

./: CMakeLists.txt  README.md  config.ini
Client/: CMakeLists.txt  Makefile_client  SmartHomeClient.cpp
Client/AES/: AES.h  AES2.c  AESCBC.c
Client/AndlinkDeviceControlEvent/: AndlinkDeviceControlCommonResp.cpp  AndlinkDeviceLEDControlReq.cpp  AndlinkDeviceMacFilterReq.cpp  AndlinkDeviceRadioConfigReq.cpp  AndlinkDeviceRebootReq.cpp  AndlinkDeviceRoamingConfigReq.cpp  AndlinkDeviceUnbindReq.cpp  AndlinkDeviceUpgradeReq.cpp  AndlinkDeviceWPSReq.cpp  AndlinkDeviceWiFiParameterSyncReq.cpp  AndlinkDeviceWiFiSwitchReq.cpp
Client/AndlinkDeviceEvent/: AndlinkDeviceHeartbeatResponse.cpp  AndlinkDeviceOnlineResponse.cpp  AndlinkDeviceOther.cpp  AndlinkDeviceRequestPlugInResponse.cpp
Client/AndlinkDeviceInclude/: AndlinkDeviceControlEvent.hpp  AndlinkDeviceEvent.hpp  AndlinkDeviceQueryEvent.hpp
Client/AndlinkDeviceQueryEvent/: AndlinkDeviceApConfigInfoQueryResp.cpp  AndlinkDeviceUplinkStatusQueryResp.cpp  AndlinkDeviceWiFiStatsQueryResp.cpp
Client/MD5/: MD5.h
Client/cJSON/Demo/: Demo0.cpp  Demo1.cpp  Demo2.cpp  Demo3.cpp  Demo4.cpp  Demo5.cpp  Demo6.cpp  uplink_msg_build.cpp
Client/include/: DataBase.h  DeviceDataStore.hpp  ExcutionUnitClient.hpp  FsmManager.hpp  RandomGenerator.hpp  TCPClient.hpp  UDPClient.hpp
Client/src/: DataBase.c  DeviceDataBasicConfig.cpp  DeviceDataRadioConfig.cpp  DeviceDataReadOnly.cpp  DeviceDataRunTime.cpp  DeviceDataStore.cpp  ExcutionUnitClient.cpp  ExcutionUnitControlChecker.cpp  ExcutionUnitFsmAction.cpp  ExcutionUnitQueryChecker.cpp  FsmManager.cpp  RandomGenerator.cpp  TCPClient.cpp  UDPClient.cpp
doc/messageExample/: apInfoReq.txt  apInfoResp.txt  authReq.txt  authResp.txt  bootReq.txt  bootResp.txt  heartbeatReq.txt  heartbeatResp.txt  pluginReq.txt  pluginResp.txt  registerReq.txt  registerResp.txt
src/: CMakeLists.txt  SmartHomeMain.cpp
src/SS_DataChannel/: CMakeLists.txt
src/SS_DataChannel/include/: ContainerNetwork.hpp  ContainerTerminal.hpp  SocketHandle.hpp
src/SS_DataChannel/src/: ContainerNetwork.cpp  ContainerTerminal.cpp  SocketHandle.cpp
src/SS_Deployment/include/: DataQueue.hpp  ExcutionUnit.hpp  ExcutionUnitAndlink.hpp  ExcutionUnitAndlinkPlugIn.hpp  ExcutionUnitTerminal.hpp  ExcutionUnitUDPNetwork.hpp  ExcutionUnitWithMultipleQueue.hpp  ExcutionUnitWithSignalQueue.hpp  PacketStatistician.hpp  SmartHomeDeployment.hpp
src/SS_Deployment/src/: ExcutionUnitAndlink.cpp  ExcutionUnitAndlinkPlugIn.cpp  ExcutionUnitAndlinkPlugInControl.cpp  ExcutionUnitTerminal.cpp  ExcutionUnitTerminalCmdCallback.cpp  ExcutionUnitUDPNetwork.cpp  SmartHomeDeployment.cpp  SmartHomeDeploymentTerminalCmd.cpp
src/SS_EventResolve/: CMakeLists.txt
src/SS_EventResolve/AndlinkDeviceControlEvent/: AndlinkDeviceLEDControlReq.cpp  AndlinkDeviceMacFilterReq.cpp  AndlinkDeviceRadioConfigReq.cpp  AndlinkDeviceRebootReq.cpp  AndlinkDeviceRoamingConfigReq.cpp  AndlinkDeviceUnbindReq.cpp  AndlinkDeviceUpgradeReq.cpp  AndlinkDeviceWPSReq.cpp  AndlinkDeviceWiFiParameterSyncReq.cpp  AndlinkDeviceWiFiSwitchReq.cpp
src/SS_EventResolve/AndlinkDeviceEvent/: AndlinkDeviceAuthRequest.cpp  AndlinkDeviceAuthResponse.cpp  AndlinkDeviceDisconnectRequest.cpp  AndlinkDeviceDisconnectResponse.cpp  AndlinkDeviceHeartbeatRequest.cpp  AndlinkDeviceHeartbeatResponse.cpp  AndlinkDeviceOnlineRequest.cpp  AndlinkDeviceOnlineResponse.cpp  AndlinkDeviceRegisterRequest.cpp  AndlinkDeviceRegisterResponse.cpp  AndlinkDeviceRequestPlugInRequest.cpp  AndlinkDeviceRequestPlugInResponse.cpp
src/SS_EventResolve/AndlinkDeviceQueryEvent/: AndlinkDeviceApConfigInfoQueryReq.cpp  AndlinkDeviceApConfigInfoQueryResp.cpp  AndlinkDeviceDataReportReq.cpp  AndlinkDeviceDataReportResp.cpp  AndlinkDeviceSTAInfoQueryReq.cpp  AndlinkDeviceSTAInfoQueryResp.cpp  AndlinkDeviceUplinkStatusQueryReq.cpp  AndlinkDeviceUplinkStatusQueryResp.cpp  AndlinkDeviceWiFiStatsQueryReq.cpp  AndlinkDeviceWiFiStatsQueryResp.cpp
src/SS_EventResolve/include/: AndlinkDeviceControlEvent.hpp  AndlinkDeviceEvent.hpp  AndlinkDeviceEventBuilder.hpp  AndlinkDeviceEventHandler.hpp  AndlinkDeviceQueryEvent.hpp  EventTerminal.hpp  EventTypeStruct.hpp  StructureDeviceNetworkEvent.hpp
src/SS_EventResolve/src/: AndlinkDeviceControlEventBuilder.cpp  AndlinkDeviceEventBuilder.cpp  AndlinkDeviceEventHandler.cpp  AndlinkDeviceQueryEventBuilder.cpp  EventTerminal.cpp  EventTypeStruct.cpp
src/SS_SysMechanish/: CMakeLists.txt
src/SS_SysMechanish/include/: CalendarClock.hpp  ExcutionUnit.hpp  RandomGenerator.hpp  SignalRegister.hpp  SystemNotify.hpp  TCPListenerHandler.hpp  TCPServerHandler.hpp  TerminalHandler.hpp  TimerWithExcutionUnit.hpp  UDPClientHandler.hpp  UDPServerHandler.hpp
src/SS_SysMechanish/src/: CalendarClock.cpp  RandomGenerator.cpp  SignalRegister.cpp  SystemNotify.cpp  TCPListenerHandler.cpp  TCPServerHandler.cpp  TerminalHandler.cpp  UDPClientHandler.cpp  UDPServerHandler.cpp
src/SS_TerminalCmd/: CMakeLists.txt
src/SS_TerminalCmd/include/: TerminalCmd.hpp
src/SS_TerminalCmd/src/: TerminalCmdHelp.cpp
src/SS_UeContext/: CMakeLists.txt
src/SS_UeContext/include/: DataBaseStorage.hpp  UeContext.hpp  UeContextAndlink.hpp  UeContextHolder.hpp  UeContextHolderAndlink.hpp
src/SS_UeContext/src/: DataBaseStorage.cpp  UeContextAndlink.cpp  UeContextHolderAndlink.cpp
